crates/ariad-cli/tests/snapshots/commands_cli__inspect_docx_human_output.snap
---
source: crates/ariad-cli/tests/commands_cli.rs
expression: normalize_stdout(&output)
---
format:    docx
bytes:     833111
counts:    2 headings (h1: 1, h2: 1), 4 paragraphs, 0 tables, 0 images, 0 links, 0 footnotes, 160 words
reachable: epub, html, markdown
