crates/ariad-cli/tests/snapshots/commands_cli__inspect_docx_json_output.snap
---
source: crates/ariad-cli/tests/commands_cli.rs
expression: normalize_stdout(&output)
---
{
  "format": "docx",
  "bytes": 833111,
  "meta": {
    "title": null,
    "authors": [],
    "language": null,
    "date": null,
    "subject": null,
    "keywords": [],
    "source_format": "docx"
  },
  "counts": {
    "headings": {
      "1": 1,
      "2": 1
    },
    "paragraphs": 4,
    "tables": 0,
    "images": 0,
    "links": 0,
    "footnotes": 0,
    "words": 160
  },
  "warnings": [],
  "reachable": [
    "epub",
    "html",
    "markdown"
  ]
}
