crates/ariad-cli/tests/snapshots/commands_cli__inspect_pdf_human_output.snap
---
source: crates/ariad-cli/tests/commands_cli.rs
expression: normalize_stdout(&output)
---
format:    pdf
bytes:     67775
reachable: (none)
