crates/ariad-cli/tests/snapshots/commands_cli__inspect_pdf_json_output.snap
---
source: crates/ariad-cli/tests/commands_cli.rs
expression: normalize_stdout(&output)
---
{
  "format": "pdf",
  "bytes": 67775,
  "meta": null,
  "counts": null,
  "warnings": [
    {
      "code": "engine_missing",
      "message": "requires the docling engine (roadmap 1b)"
    }
  ],
  "reachable": []
}
